ecmascript/parser/tests/test262-error-references/fail/dcb304c591564c68.js.stderr
error: Expected an octal digit
 --> $DIR/tests/test262-parser/fail/dcb304c591564c68.js:1:3
  |
1 | 0O
  |   ^

